--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -142,6 +142,9 @@
     .marketcap{
         display: none;
     }
+    .background-video{
+        height: 700px;
+    }
 }
 @media (max-width : 500px){
     .layout div img{
@@ -152,5 +155,8 @@
     }
     .hero form input{
         width: 100px;
+    }
+    .background-video{
+        height: 700px;
     }
 }
